--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ path = "src/main.rs"
 name = "fetch_data"
 path = "src/bin/fetch_data.rs"
 
+# Web server binary
+[[bin]]
+name = "tellme-web"
+path = "src/bin/tellme_web.rs"
+
 [dependencies]
 # TUI and terminal handling
 ratatui = "0.24"
@@ -39,4 +44,9 @@ urlencoding = "2.1"
 
 # Async runtime helpers
 futures = "0.3"
-semver = "1.0" 
+semver = "1.0"
+
+# Web server dependencies
+axum = "0.7"
+tower = "0.4"
+tower-http = { version = "0.5", features = ["fs", "cors"] }
