--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ rusqlite = { version = "0.29", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 rand = "0.8"
+regex = "1.10"
 
 [features]
 default = ["custom-protocol"]
